--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.localebro:okhttpprofiler:1.0.8'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
 }
