--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.localebro:okhttpprofiler:1.0.8'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
 }
