--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     implementation 'com.localebro:okhttpprofiler:1.0.8'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
