--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,11 @@
         tools:targetApi="31">
         <activity
             android:screenOrientation="portrait"
-            android:name="com.example.forexample.UI.SplashActivity"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:screenOrientation="portrait"
-            android:name="com.example.forexample.MainActivity"
+            android:name=".UI.SplashActivity"
             android:exported="true"
             android:label="Doors Opener"
             android:theme="@style/Theme.ForExample.NoActionBar">
