--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'realm-android'
 }
-
-apply plugin: "realm-android"
 
 android {
     compileSdk 33
@@ -34,7 +31,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
@@ -46,16 +42,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.localebro:okhttpprofiler:1.0.8'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.10'
+    implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    def room_version = "2.4.3"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
-    implementation "androidx.room:room-rxjava3:$room_version"
-    implementation "androidx.room:room-guava:$room_version"
-    testImplementation "androidx.room:room-testing:$room_version"
-    implementation "androidx.room:room-paging:$room_version"
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
