Список дверей работает с Realm

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
+
 rootProject.name = "ForExample"
 include ':app'
