--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: "realm-android"
+
 android {
     compileSdk 33
 
@@ -42,12 +44,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.localebro:okhttpprofiler:1.0.8'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation "androidx.room:room-runtime:2.4.3"
-    annotationProcessor "androidx.room:room-compiler:2.4.3"
     implementation "com.daimajia.swipelayout:library:1.2.0@aar"
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
-    implementation "androidx.room:room-rxjava3:2.4.3"
+    implementation 'io.realm:realm-gradle-plugin:10.11.1'
 }
